# serdec

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  compile_flags.txt  serdec.c  serdec.h  serdec_json.c  serdec_json.h
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  codeql.yml  trigger-docs-build.yml
docs/: docusaurus.config.js  package-lock.json
docs/docs/: intro.md
examples/: example_basic.c
include/: serdec.h  serdec_json.h
include/serdec/: arena.h  buffer.h  error.h  json.h  serdec.h  types.h  version.h
src/: internal.h  serdec_arena.c  serdec_arena.h  serdec_json.c  serdec_string.c  serdec_string.h  serdec_utils.h  serdec_vector.c  serdec_vector.h
src/core/: arena.c  buffer.c  error.c  lexer.c  string.c  utf8.c
tests/: CMakeLists.txt  test.c  test.h  test_arena.c  test_basic.c  test_buffer.c  test_error.c  test_lexer.c  test_main.c  test_string.c  test_utf8.c
